# bingo

./: .dockerignore  .env.production  .gitignore  .rustfmt.toml  2025-06-26-bingo-analysis.md  ANALYSIS.md  ARCHITECTURE_EXTENSIBILITY.md  CLAUDE.md  CODE_PRUNING_CHECKLIST.md  Cargo.toml  DOCS.md  Dockerfile  GEMINI.md  IMPLEMENTATION_PLAN.md  MIGRATION_STRATEGY.md  Makefile  OPTIMIZATION_FRAMEWORK.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_TESTS.md  PLUGIN_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_COMPLETION_SUMMARY.md  README.md  RETE_IMPLEMENTATION_VERIFICATION.md  SPECS.md  TESTING.md  clippy-baseline.txt  clippy.toml  config.toml  debug_performance_test.rs  debug_simple_rule_test.rs  docker-compose.yml  fix_validation.md  lcov.info  quick_test_analysis.sh  test-categories.md  test-runner.sh  test_analysis.md  test_parallel_fix.rs  test_simplified_api.rs  (+3 more)
crates/bingo-api/: Cargo.toml  build.rs
crates/bingo-api/src/: circuit_breaker.rs  config.rs  error.rs  error_cli.rs  grpc_error_handler.rs  health_checks.rs  incremental_processor.rs  lib.rs  main.rs  metrics.rs  operational_hardening.rs  optimized_conversions.rs  production_cli.rs  ruleset_cache.rs  security.rs  streaming.rs  tracing_setup.rs  types.rs
crates/bingo-api/src/cache/: in_memory_provider.rs  mod.rs  redis_provider.rs  unified_cache.rs
crates/bingo-api/src/grpc/: conversions.rs  mod.rs  service.rs
crates/bingo-api/tests/: README.md  api_cache_integration_test.rs  complex_conditions_test.rs  comprehensive_api_test.rs  concurrent_requests_test.rs  core_integration.rs  formula_createfact_actions_test.rs  grpc_compliance_tests.rs  grpc_payroll_tests.rs  grpc_session_isolation_test.rs  grpc_tronc_tests.rs  grpc_wage_cost_tests.rs  json_test_framework.rs  json_test_runner.rs  optimization_test.rs  rule_engine_sync_test.rs  security_test.rs  stateless_api_test.rs  streaming_test.rs
crates/bingo-api/tests/json-tests/basic/: health_check_expected.json  health_check_input.json  health_check_metadata.json  overtime_detection_expected.json  overtime_detection_input.json  overtime_detection_metadata.json
crates/bingo-api/tests/json-tests/caching/: engine_cache_etag_expected.json  engine_cache_etag_input.json  engine_cache_etag_metadata.json  ruleset_registration_expected.json  ruleset_registration_input.json  ruleset_registration_metadata.json
crates/bingo-api/tests/json-tests/calculator/: formula_calculation_expected.json  formula_calculation_input.json  formula_calculation_metadata.json
crates/bingo-api/tests/json-tests/compliance/: student_visa_compliance_expected.json  student_visa_compliance_input.json  student_visa_compliance_metadata.json
crates/bingo-api/tests/json-tests/edge-cases/: invalid_rule_format_expected.json  invalid_rule_format_input.json  invalid_rule_format_metadata.json
crates/bingo-calculator/: Cargo.toml
crates/bingo-calculator/src/: calculator.rs  lib.rs  limit_validator.rs  plugin.rs  plugin_manager.rs  threshold_check.rs  types.rs
crates/bingo-calculator/src/built_in/: add.rs  mod.rs  multiply.rs  percentage_add.rs  percentage_deduct.rs  proportional_allocator.rs  time_between_datetime.rs  weighted_average.rs
crates/bingo-calculator/src/dsl/: ast.rs  evaluator.rs  functions.rs  mod.rs  parser.rs
crates/bingo-calculator/tests/: built_in_calculators_test.rs
crates/bingo-core/: Cargo.toml
crates/bingo-core/benches/: engine_bench.rs  million_fact_bench.rs
crates/bingo-core/src/: adaptive_backends.rs  advanced_indexing.rs  aggregation.rs  alpha_memory.rs  arena_store.rs  beta_network.rs  bloom_filter.rs  cache.rs  calculator_cache.rs  calculator_integration.rs  conflict_resolution.rs  constants.rs  debug_hooks.rs  debugging.rs  distributed_rete.rs  engine.rs  enhanced_monitoring.rs  error.rs  error_diagnostics.rs  error_testing.rs  fact_store.rs  fast_lookup.rs  field_indexing.rs  incremental_construction.rs  incremental_processing.rs  lazy_aggregation.rs  lib.rs  memory.rs  memory_pools.rs  memory_profiler.rs  node_sharing.rs  optimization_coordinator.rs  optimization_demo.rs  parallel.rs  parallel_rete.rs  pattern_cache.rs  payroll_expressions.rs  performance_config.rs  performance_regression_testing.rs  performance_tracking.rs  (+17 more)
crates/bingo-core/src/calculator/: evaluator.rs  functions.rs  mod.rs  parser.rs
crates/bingo-core/src/calculators/: hours_calculator.rs  mod.rs  threshold_checker.rs
crates/bingo-core/tests/: action_type_handlers_test.rs  adaptive_token_pool_test.rs  advanced_aggregation_integration_test.rs  alpha_memory_performance_test.rs  api_payload_rule_test.rs  array_object_literals_test.rs  beta_memory_integration_test.rs  beta_network_test.rs  calculator_cache_performance_test.rs  calculator_integration_test.rs  calculator_rete_integration_test.rs  client_isolation_demo.rs  cluster_membership_test.rs  complex_rule_performance_test.rs  comprehensive_component_profiling.rs  comprehensive_concurrency_test.rs  comprehensive_optimization_summary.rs  comprehensive_performance_benchmarks.rs  comprehensive_rete_benchmark.rs  concurrent_engine_test.rs  conditional_set_integration_test.rs  conflict_resolution_test.rs  cross_fact_matching_test.rs  debug_10k_scaling.rs  debug_1k_scaling.rs  debug_action_execution.rs  debug_beta_test.rs  debug_delete_rule_test.rs  debug_pattern_matching.rs  debug_performance_analysis.rs  debug_rule_matching.rs  debug_threaded_processing.rs  debugging_test.rs.disabled  distributed_fact_propagation_test.rs  distributed_fault_tolerance_test.rs  distributed_rete_basic_test.rs  distributed_rete_test.rs  distributed_state_sync_test.rs  end_to_end_integration_test.rs  engine_threaded_integration_test.rs  (+57 more)
crates/bingo-performance-test/: Cargo.toml
crates/bingo-performance-test/src/: lib.rs
crates/bingo-rete/: Cargo.toml
crates/bingo-rete/benches/: rete_performance.rs
crates/bingo-rete/src/: lib.rs  nodes.rs
crates/bingo-types/: Cargo.toml
crates/bingo-types/src/: lib.rs  types.rs
crates/bingo-web/: Cargo.toml
crates/bingo-web/src/: main.rs
crates/bingo-web/templates/: base.html  dashboard.html  rules.html
(+92 files in other folders)
