[workspace]
members = [
    "crates/bingo-core", 
    "crates/bingo-api",
    "crates/bingo-calculator",
    "crates/bingo-prelude"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.21"
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Web framework
axum = { version = "0.8.4", features = ["json", "tracing", "macros"] }
tower = "0.5.3"
tower-http = { version = "0.6.6", features = ["trace", "cors", "limit"] }

# Caching
redis = { version = "0.32.3", features = ["tokio-comp", "json"] }
deadpool-redis = "0.14"
async-trait = "0.1.85"

# Performance and memory
bumpalo = { version = "3.17.0", features = ["collections"] }
ahash = "0.8.12"
dashmap = "6.1.0"
crossbeam = "0.8.5"
roaring = "0.10.11"

# CLI
clap = { version = "4.5.40", features = ["derive"] }

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Testing and benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
