[package]
name = "bingo-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bingo"
path = "src/main.rs"

[dependencies]
# Core dependencies
bingo-core = { path = "../bingo-core" }
bingo-calculator = { path = "../bingo-calculator" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["timeout", "limit", "validate-request"] }

# OpenAPI support
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0", features = ["axum"] }
utoipa-redoc = { version = "3.0", features = ["axum"] }

# Additional utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fnv = "1.0"
md5 = "0.7"
dashmap = { workspace = true }
toml = "0.8"
thiserror = "1.0"

# Streaming support
futures-util = "0.3"
tokio-stream = "0.1"

# Observability and metrics
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.29"
opentelemetry-otlp = { version = "0.17", features = ["tonic"] }
opentelemetry-stdout = "0.5"
tracing-opentelemetry = "0.25"
once_cell = "1.19"
sysinfo = "0.30"
prometheus = "0.14"

# Caching
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.25", features = ["tokio-comp"], optional = true }
bincode = "1.3"
async-trait = "0.1"

[dev-dependencies]
axum-test = "15.0"
futures = "0.3"

[features]
default = ["redis-cache"]
redis-cache = ["dep:redis"]
disable_concurrency_limiter = []
disable_rate_limiter = []
disable_request_monitor = []
disable_timeout = []