[package]
name = "bingo-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bingo"
path = "src/main.rs"

[dependencies]
# Core dependencies
bingo-core = { path = "../bingo-core" }
bingo-calculator = { path = "../bingo-calculator" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# gRPC dependencies
tonic = { version = "0.13.1", features = ["tls-webpki-roots"] }
prost = "0.13.5"
async-stream = "0.3.6"

# Additional utilities
uuid = { workspace = true }
chrono = { workspace = true }
fnv = "1.0.7"
md5 = "0.8.0"
dashmap = { workspace = true }
toml = "0.8.23"
thiserror = { workspace = true }

# Streaming support
futures-util = "0.3.31"
tokio-stream = "0.1.17"

# Basic observability
once_cell = "1.21.3"

# Caching
moka = { version = "0.12.10", features = ["future"] }
redis = { version = "0.32.3", features = ["tokio-comp"], optional = true }
bincode = "1.3.3"
async-trait = { workspace = true }

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
futures = "0.3.31"

[features]
default = ["redis-cache"]
redis-cache = ["dep:redis"]
disable_concurrency_limiter = []
disable_rate_limiter = []
disable_request_monitor = []
disable_timeout = []