[package]
name = "bingo-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bingo-calculator = { path = "../bingo-calculator" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
sys-info = "0.9"

[dev-dependencies]
criterion = { workspace = true }
bingo-performance-test = { path = "../bingo-performance-test" }
