[package]
name = "bingo-core"
version = "0.1.0"
edition = "2024"
description = "High-performance RETE rules engine core library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/bingo"
readme = "README.md"
keywords = ["rules-engine", "rete", "pattern-matching", "inference", "business-rules"]
categories = ["algorithms", "data-structures"]

[dependencies]
bingo-types = { path = "../bingo-types" }
bingo-calculator = { path = "../bingo-calculator" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
crossbeam = { workspace = true }
crossbeam-utils = "0.8"
rayon = "1.10"
num_cpus = "1.16"
sys-info = "0.9"

[dev-dependencies]
criterion = { workspace = true }
bingo-performance-test = { path = "../bingo-performance-test" }
serial_test = "3.0"
