[package]
name = "bingo-performance-test"
version = "0.1.0"
edition = "2024"
description = "Performance testing utilities for the Bingo rules engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/bingo"
readme = "README.md"
keywords = ["performance", "testing", "benchmarks", "rules-engine", "metrics"]
categories = ["development-tools", "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
bingo-core = { path = "../bingo-core" }
