[package]
name = "bingo-rete"
version = "0.1.0"
edition = "2024"

[dependencies]
bingo-core = { path = "../bingo-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bumpalo = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
roaring = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "rete_performance"
harness = false