[package]
name = "bingo-types"
version = "0.1.0"
edition = "2024"
description = "Core type definitions for the Bingo rules engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/bingo"
readme = "README.md"
keywords = ["types", "data-structures", "rules-engine", "fact", "value"]
categories = ["data-structures", "algorithms"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
