[package]
name = "bingo-web"
version = "0.1.0"
edition = "2024"
description = "Web interface for the Bingo rules engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/bingo"
readme = "README.md"
keywords = ["web", "ui", "rules-engine", "dashboard", "interface"]
categories = ["web-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
